--- a/src/app/_sass/App.scss
+++ b/src/app/_sass/App.scss
@@ -1,3 +1,3 @@
-@import './abstracts/variables';
-@import './abstracts/fonts';
-@import './base/typography';
+@import './abstracts/_variables';
+@import './abstracts/_fonts';
+@import './base/_typography';
