--- a/src/app/_sass/App.scss
+++ b/src/app/_sass/App.scss
@@ -15,4 +15,5 @@ Components
 */
 @import './components/Header';
 @import './components/Introduction';
+@import './components/Works';
 @import './components/Footer';
