--- a/src/app/_sass/base/_typography.scss
+++ b/src/app/_sass/base/_typography.scss
@@ -7,3 +7,9 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 100;
 }
+
+h2 {
+    font-weight: 700;
+    color: $color-heading;
+    text-transform: uppercase;
+}
