Header(WIP), Aboutpage
TODO ON HEADER, Animations fix

--- a/src/app/_sass/App.scss
+++ b/src/app/_sass/App.scss
@@ -16,4 +16,5 @@ Components
 @import './components/Header';
 @import './components/Introduction';
 @import './components/Works';
+@import './components/About';
 @import './components/Footer';
