--- a/src/app/_sass/components/Introduction.scss
+++ b/src/app/_sass/components/Introduction.scss
@@ -1,7 +1,7 @@
 .introduction {
     display: grid;
     justify-content: center;
-    margin-top: 5rem;
+    padding-top: 18rem;
 
     h1 {
         display: grid;
