--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -20,6 +20,7 @@
             padding: 0;
             display: flex;
             transition: transform 600ms cubic-bezier(0.25, 1, 0.35, 1);
+            z-index: 1;
     
             .slide {
                 position: relative;
