fix headings hierarchy & start detailpage

--- a/src/app/_sass/App.scss
+++ b/src/app/_sass/App.scss
@@ -17,4 +17,5 @@ Components
 @import './components/Introduction';
 @import './components/Works';
 @import './components/About';
+@import './components/Detail';
 @import './components/Footer';
