--- a/src/app/_sass/base/_typography.scss
+++ b/src/app/_sass/base/_typography.scss
@@ -5,7 +5,8 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Lato', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
+    color: $color-secondary;
 }
 
 h2, h3 {
