--- a/src/app/_sass/components/Detail.scss
+++ b/src/app/_sass/components/Detail.scss
@@ -1,11 +1,12 @@
 .detail {
-    padding-top: 14rem;
+    padding: 14rem 4rem 0rem 4rem;
     display: grid;
     justify-content: center;
 
     h1 {
         font-size: 3.6rem;
         margin-bottom: 0;
+        text-align: center;
     }
 
     .role__tags {
@@ -15,6 +16,59 @@
 
         span {
             text-align: center;
+        }
+    }
+
+    .description {
+        margin-top: 6rem;
+    }
+
+    .external__links {
+        margin-top: 4rem;
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+
+        span {
+            text-align: center;
+
+            a {
+                font-size: 2rem;
+            }
+        }
+    }
+
+    .date {
+        display: grid;
+        width: 100%;
+        margin-top: 10rem;
+        grid-template-columns: 100%;
+        justify-content: center;
+        align-items: center;
+        
+        span {
+            text-align: center;
+        }
+
+        .year {
+            font-size: 2rem;
+        }
+
+        .month {
+            font-size: 1.4rem;
+        }
+    }
+
+    .images {
+        margin-top: 1rem;
+        width: 100%;
+        height: 100%;
+
+        img {
+            width: 100%;
+            object-fit: cover;
         }
     }
 }
