Linked cards to detail page with matching id

--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -54,6 +54,7 @@
                     .slide__headline {
                         font-size: 9.6vw;
                         width: 120%;
+                        height: 100%;
                         position: absolute;
                         margin-left: -10%;
                         margin-top: -2.5rem;
