Link detailpage to jsonfile

--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -9,7 +9,7 @@
         height: 100%;
         margin: 4rem auto;
 
-        .slider__index {
+        .slider__id {
             text-align: center;
         }
 
