--- a/src/app/_sass/components/About.scss
+++ b/src/app/_sass/components/About.scss
@@ -7,6 +7,17 @@
     article {
         width: 100%;
 
+        @include tablet {
+            display: grid;
+            grid-gap: 0;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @include desktop {
+            max-width: 80rem;
+            margin: 0 auto;
+        }
+
         .picture {
             width: 60%;
             margin: 0 auto;
@@ -14,13 +25,30 @@
             img {
                 width: 100%;
             }
+
+            @include tablet {
+                grid-column: 2;
+                grid-row: 1;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
         }
 
         .aboutme {
             padding: 4rem;
 
-            p {
-                text-align: justify;
+            @include tablet {
+                grid-column: 1;
+                grid-row: 1;
+                padding: 0 8rem;
+            }
+
+            @include desktop {
+                padding: 0;
             }
         }
     }
