--- a/src/app/_sass/base/_typography.scss
+++ b/src/app/_sass/base/_typography.scss
@@ -11,7 +11,7 @@ body {
 
 h2, h3 {
     font-weight: 700;
-    color: $color-heading;
+    color: $color-secondary;
     text-transform: uppercase;
 }
 p {
