--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -1,11 +1,10 @@
 .works {
     margin-top: 8rem;
     width: 100%;
-    height: 60rem;
+    height: 100vh;
     overflow: hidden;
 
     @include tablet {
-        height: 100rem;
         margin-top: 10rem;
     }
 
