--- a/src/app/_sass/components/About.scss
+++ b/src/app/_sass/components/About.scss
@@ -41,6 +41,10 @@
         .aboutme {
             padding: 4rem;
 
+            .intro__about {
+                font-weight: 700;
+            }
+
             @include tablet {
                 grid-column: 1;
                 grid-row: 1;
