add accordion & carousel fix

--- a/src/app/_sass/components/Detail.scss
+++ b/src/app/_sass/components/Detail.scss
@@ -98,4 +98,9 @@
             object-fit: cover;
         }
     }
+
+    .accordion {
+        max-width: 80rem;
+        cursor: pointer;
+    }
 }
