--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -1,7 +1,6 @@
 .works {
     margin-top: 8rem;
     width: 100%;
-    height: 100vh;
     overflow: hidden;
 
     @include tablet {
@@ -14,7 +13,7 @@
 
     .slider {
         width: 60%;
-        height: 100%;
+        height: 80vh;
         margin: 4rem auto;
 
         .slider__id {
@@ -31,29 +30,14 @@
             z-index: 1;
     
             .slide {
-                position: relative;
                 opacity: 0.3;
                 flex: 1 0 100%;
-                width: 100%;
                 margin-right: 1rem;
+                background-position: 50%;
+                background-size: cover;
                 transition: 
                     opacity calc(600ms / 2) cubic-bezier(0.25, 0.46, 0.45, 0.84),
                     transform calc(600ms / 2) cubic-bezier(0.25, 0.46, 0.45, 0.84);
-
-                .slide__image-wrapper {
-                    position: absolute;
-                    top: 0%;
-                    width: 100%;
-                    height: 100%;
-                    z-index: -1;
-
-                    .slide__image {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        opacity: 0;
-                    }
-                }
 
                 .slide__content {
                     opacity: 0;
