--- a/src/app/_sass/components/Detail.scss
+++ b/src/app/_sass/components/Detail.scss
@@ -25,6 +25,35 @@
         }
     }
 
+    .back {
+        font-size: 5rem;
+        position: fixed;
+        z-index: 300;
+    }
+
+    .navigate__projects {
+        width: 100%;
+        position: fixed;
+        bottom: 8rem;
+        left: 0;
+
+        .navigate__wrapper {
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+            align-items: center;
+            text-align: center;
+
+            a {
+                font-size: 3rem;
+            }
+
+            p {
+                font-size: 1.5rem;
+                text-transform: uppercase;
+            }
+        }
+    }
+
     .role__tags {
         display: grid;
         grid-template-columns: 100%;
@@ -91,7 +120,6 @@
     .images {
         margin-top: 1rem;
         width: 100%;
-        height: 100%;
 
         img {
             width: 100%;
