--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -11,61 +11,29 @@
         margin-top: 16rem;
     }
 
-    .slider {
-        width: 60%;
-        height: 80vh;
-        margin: 4rem auto;
 
-        .slider__id {
-            text-align: center;
-        }
+    .projects__container {
+        width: 100%;
+    }
 
-        .slider__wrapper {
-            margin-top: 4rem;
-            width: 100%;
-            height: 100%;
-            padding: 0;
+        .projects__wrapper {
             display: flex;
-            transition: transform 600ms cubic-bezier(0.25, 1, 0.35, 1);
-            z-index: 1;
+            flex-wrap: nowrap;
+            min-width: min-content;
+            //width: 60%;
+            //margin: 4rem auto;
     
-            .slide {
-                opacity: 0.3;
-                flex: 1 0 100%;
-                margin-right: 1rem;
+    
+            div {
+                margin-left: 4rem;
+                width: 60rem;
+                height: 80vh;
                 background-position: 50%;
                 background-size: cover;
-                transition: 
-                    opacity calc(600ms / 2) cubic-bezier(0.25, 0.46, 0.45, 0.84),
-                    transform calc(600ms / 2) cubic-bezier(0.25, 0.46, 0.45, 0.84);
-
-                .slide__content {
-                    opacity: 0;
-                    visibility: hidden;
-        
-                    .slide__headline {
-                        font-size: 9.5vw;
-                        width: 120%;
-                        height: 100%;
-                        position: absolute;
-                        margin-left: -10%;
-                        margin-top: -2.5rem;
-                        z-index: -9999;
-                    }
-                }
             }
-
-            .slide--current {
-                opacity: .9;
-
-                .slide__content {
-                    animation: fade-in calc(800ms / 2) cubic-bezier(0.25, 0.46, 0.45, 0.84) forwards;
-                    visibility: visible;
-                }
-            }
-            
         }
-    }
+
+
 }
 
 @keyframes fade-in {
