revamp carousel & add projects

--- a/src/app/_sass/components/Detail.scss
+++ b/src/app/_sass/components/Detail.scss
@@ -78,6 +78,28 @@
                 margin: 6rem auto;
             }
         }
+
+        .team {
+            margin: 2rem auto;
+
+
+            .person {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                align-items: center;
+                justify-content: center;
+                grid-gap: 1rem;
+
+                p {
+                    font-size: 1rem;
+                    margin: 0;
+                }
+
+                a {
+                    font-size: 1rem;
+                }
+            }
+        }
     
         .external__links {
             margin-top: 4rem;
