--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -20,16 +20,57 @@
             display: flex;
             flex-wrap: nowrap;
             min-width: min-content;
+            cursor: grab;
             //width: 60%;
             //margin: 4rem auto;
     
     
-            div {
-                margin-left: 4rem;
-                width: 60rem;
-                height: 80vh;
+            .project__content-wrapper {
+                margin-left: 1rem;
+                width: 30rem;
+                height: 35vh;
                 background-position: 50%;
                 background-size: cover;
+
+                @include tablet {
+                    margin-left: 4rem;
+                    width: 60rem;
+                    height: 55vh;
+                }
+
+                a {
+                    height: 100%;
+                }
+
+                .project__content {
+                    width: 100%;
+                    background: white;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    justify-content: center;
+                    align-items: center;
+
+                    .project__content-left {
+                        padding-left: 2rem;
+
+                        h3 {
+                            font-size: 3rem;
+                            margin: 0;
+                        }
+    
+                        p {
+                            margin-top: 0;
+                        }
+                    }
+
+                    .project__content-right {
+                        font-size: 4rem;
+                        margin-bottom: 2rem;
+                        margin-right: 4rem;
+                        text-align: right;
+                    }
+            
+                }
             }
         }
 
