--- a/src/app/_sass/components/Works.scss
+++ b/src/app/_sass/components/Works.scss
@@ -31,6 +31,7 @@
                 height: 35vh;
                 background-position: 50%;
                 background-size: cover;
+                overflow: hidden;
 
                 @include tablet {
                     margin-left: 4rem;
